tests/snapshots/tui_snapshot__tui_assistant_with_thinking.snap
---
source: tests/tui_snapshot.rs
assertion_line: 214
expression: view
---
  Pi (dummy/dummy-model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  ctrl+t: thi...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions


  Assistant:
  Thinking: Reasoning details here.

    Answer text.

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  Tokens: 0 in / 0 out  |  Persist: balanced  |  /help  |  Ctrl+C: quit
